[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Editor_Object.gd" type="Script" id=1]
[ext_resource path="res://Item_Select.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/tile_blocks.tres" type="TileSet" id=3]
[ext_resource path="res://Scripts/FileDialog.gd" type="Script" id=4]
[ext_resource path="res://Scripts/TileMap.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=6]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sprites/8-bit-envir/slice4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/8-bit-envir/slice2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/8-bit-envir/slice3.png" type="Texture" id=12]

[node name="main" type="Node2D"]
position = Vector2( 1.60962, 1.60962 )

[node name="Level" type="Node2D" parent="."]
position = Vector2( -2.00568, -1.23427 )
script = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="Level"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
cell_tile_origin = 1
centered_textures = true
cell_clip_uv = true
format = 1
script = ExtResource( 5 )

[node name="Editor_Object" type="Node2D" parent="."]
position = Vector2( -1.85139, -1.38855 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Editor_Object"]
z_index = 1

[node name="Item_Select" parent="." instance=ExtResource( 2 )]

[node name="FileDialog" type="FileDialog" parent="Item_Select"]
margin_left = 256.0
margin_top = 112.0
margin_right = 672.0
margin_bottom = 296.0
rect_min_size = Vector2( 400, 140 )
resizable = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play-button" type="Control" parent="Item_Select"]
margin_left = 512.0
margin_top = 640.0
margin_right = 896.0
margin_bottom = 688.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Item_Select/play-button"]
margin_right = 384.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press Enter to Play"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Node2D" parent="."]
z_index = -1

[node name="slice4" type="Sprite" parent="Background"]
position = Vector2( 491.331, 126.39 )
scale = Vector2( 4.0177, 3.22703 )
texture = ExtResource( 8 )
offset = Vector2( -0.685699, -4.93697 )

[node name="slice5" type="Sprite" parent="Background"]
position = Vector2( 555.331, 62.3904 )
scale = Vector2( 3.04762, 2.66667 )
texture = ExtResource( 8 )
offset = Vector2( -0.685699, -4.93697 )

[node name="slice6" type="Sprite" parent="Background"]
position = Vector2( 670.39, 126.39 )
scale = Vector2( 3.91515, 4.09179 )
texture = ExtResource( 8 )
offset = Vector2( -0.685699, -4.93697 )

[node name="slice2" type="Sprite" parent="Background"]
position = Vector2( 847.841, 83.0154 )
scale = Vector2( 4.65434, 5.2625 )
texture = ExtResource( 11 )

[node name="slice3" type="Sprite" parent="Background"]
position = Vector2( 899.382, 135.64 )
scale = Vector2( 3.14497, 1.93902 )
texture = ExtResource( 12 )
[connection signal="confirmed" from="Item_Select/FileDialog" to="Editor_Object" method="_on_FileDialog_confirmed"]
[connection signal="hide" from="Item_Select/FileDialog" to="Editor_Object" method="_on_FileDialog_hide"]
